--- a/rsc/js/css/praxis-showcase.css
+++ b/rsc/js/css/praxis-showcase.css
@@ -6,7 +6,7 @@
     margin-top: 25px;
 }
 
-#job-readiness-articles > div {
+#job-readiness-articles > .article-holder {
     width: calc(100% / 3 - 15px);
     padding: 15px;
     border: 1px solid #ccc;
@@ -15,3 +15,164 @@
     margin-bottom: 15px;
     margin-right: 15px;
 }
+
+.blue-link {
+    color: #003082;
+    text-decoration: underline !important;
+}
+
+.hide{
+    display: none;;
+}
+
+span.count {
+    display: inline-block;
+    /* background-color: red; */
+    font-size: 13px;
+    position: absolute;
+    top: 104px;
+    margin-left: 1px;
+
+}
+
+.blue-link:hover {
+    color: #888;
+}
+.blue-link:focus {
+    color: #888;
+}
+
+.month-holder > ul {
+    list-style-type: none;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    padding: 0;
+    
+}
+
+.month-holder > ul > li > button {
+    padding: 0px;
+    margin: 0px;
+    text-align: center;
+    color:none;
+    background-color:white;
+    border-color:white;
+}
+.month-holder > ul > li{
+    margin:0px 15px;
+    
+}
+
+@media only screen and (max-width: 768px) {
+    #job-readiness-articles {
+        flex-direction: column;
+    }
+    #job-readiness-articles > .article-holder {
+        width: 100%;
+    }
+
+    .article-holder {
+        display: flex;
+        flex-wrap: nowrap;
+    }
+
+    div.mobile_only {
+        margin-left: 15px;
+    }
+    
+}
+
+/* loading spinner */
+.spinner_holder {
+    display: flex;
+    width:100% ;
+    justify-content: center;
+    align-items: center;
+}
+.lds-roller {
+    display: inline-block;
+    position: relative;
+    width: 80px;
+    height: 80px;
+
+  }
+  .lds-roller div {
+    animation: lds-roller 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+    transform-origin: 40px 40px;
+  }
+  .lds-roller div:after {
+    content: " ";
+    display: block;
+    position: absolute;
+    width: 7px;
+    height: 7px;
+    border-radius: 50%;
+    background:#003082;;
+    margin: -4px 0 0 -4px;
+  }
+  .lds-roller div:nth-child(1) {
+    animation-delay: -0.036s;
+  }
+  .lds-roller div:nth-child(1):after {
+    top: 63px;
+    left: 63px;
+  }
+  .lds-roller div:nth-child(2) {
+    animation-delay: -0.072s;
+  }
+  .lds-roller div:nth-child(2):after {
+    top: 68px;
+    left: 56px;
+  }
+  .lds-roller div:nth-child(3) {
+    animation-delay: -0.108s;
+  }
+  .lds-roller div:nth-child(3):after {
+    top: 71px;
+    left: 48px;
+  }
+  .lds-roller div:nth-child(4) {
+    animation-delay: -0.144s;
+  }
+  .lds-roller div:nth-child(4):after {
+    top: 72px;
+    left: 40px;
+  }
+  .lds-roller div:nth-child(5) {
+    animation-delay: -0.18s;
+  }
+  .lds-roller div:nth-child(5):after {
+    top: 71px;
+    left: 32px;
+  }
+  .lds-roller div:nth-child(6) {
+    animation-delay: -0.216s;
+  }
+  .lds-roller div:nth-child(6):after {
+    top: 68px;
+    left: 24px;
+  }
+  .lds-roller div:nth-child(7) {
+    animation-delay: -0.252s;
+  }
+  .lds-roller div:nth-child(7):after {
+    top: 63px;
+    left: 17px;
+  }
+  .lds-roller div:nth-child(8) {
+    animation-delay: -0.288s;
+  }
+  .lds-roller div:nth-child(8):after {
+    top: 56px;
+    left: 12px;
+  }
+  @keyframes lds-roller {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+
