--- a/rsc/js/css/praxis-showcase.css
+++ b/rsc/js/css/praxis-showcase.css
@@ -65,6 +65,31 @@ span.count {
     
 }
 
+#form-holder {
+  display: flex;
+  flex-direction: row;
+}
+
+#sort-arrow {
+  display: flex;
+  flex-direction: row;
+  
+}
+#sort-arrow > button {
+  width: 40px;
+  height: 40px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  align-self: center;
+  padding: 5px;
+  margin-top: 5px;
+  margin-left: 10px;
+  text-align: center;
+  cursor: pointer;
+  background-color: white;
+  color: #003082;
+}
+
 @media only screen and (max-width: 768px) {
     #job-readiness-articles {
         flex-direction: column;
@@ -82,11 +107,11 @@ span.count {
         margin-left: 15px;
     }
 
-    form#categoryselect{
+    /* form#categoryselect{
       display: flex;
       flex-wrap: nowrap;
       justify-content: center;
-    }
+    } */
     
 }
 
